[project]
name = "ppo-impl"
version = "0.1.0"
description = ""
authors = [
    {name = "ignius299792458",email = "bogati.mahesh.299.792.458@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "gym (>=0.26.2,<0.27.0)",
    "torch (>=2.10.0,<3.0.0)",
    "stable-baselines3 (>=2.7.1,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "wandb (>=0.25.0,<0.26.0)",
    "setuptools (>=67.0.0,<67.5.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]
